# Financial-Analyst

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  README.md  pyproject.toml  render.yaml  start.sh
scripts/: download_nltk.py
src/: app.py  main.py
src/core/: processing.py  qa_agent.py
src/ingestion/: document_loader.py  news_fetcher.py  orchestrator.py  report_fetcher.py  stock_data_fetcher.py
src/utils/: database_handler.py  ticker_checker.py
